--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_OPTIONS=--openssl-legacy-provider vuepress build docs",
     "build:workflow": "vuepress build docs",
     "dev": "NODE_OPTIONS=--openssl-legacy-provider vuepress dev docs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "textlint \"*.md\" \"docs/**/*.md\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/IT4Change/IT4C.dev#readme",
   "devDependencies": {
+    "textlint": "^12.4.0",
+    "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-no-todo": "^2.0.1",
     "vuepress": "^1.9.7",
     "vuepress-theme-book": "^0.0.9"
   }
