--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "textlint": "^12.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-no-start-duplicated-conjunction": "^2.0.2",
     "textlint-rule-no-todo": "^2.0.1",
     "vuepress": "^1.9.7",
     "vuepress-theme-book": "^0.0.9"
