--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -13,5 +13,5 @@ jobs:
       - name: npm-install
         run: npm install
       
-      - name: npm-lint
-        run: npm run lint
+      - name: npm-test
+        run: npm test
