--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_OPTIONS=--openssl-legacy-provider vuepress build docs",
     "build:workflow": "vuepress build docs",
     "dev": "NODE_OPTIONS=--openssl-legacy-provider vuepress dev docs",
-    "lint": "textlint \"*.md\" \"docs/**/*.md\""
+    "test": "textlint \"*.md\" \"docs/**/*.md\""
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "textlint": "^12.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-max-comma": "^2.0.2",
     "textlint-rule-no-start-duplicated-conjunction": "^2.0.2",
     "textlint-rule-no-todo": "^2.0.1",
     "vuepress": "^1.9.7",
