--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "textlint": "^12.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-max-comma": "^2.0.2",
+    "textlint-rule-no-dead-link": "^5.1.2",
     "textlint-rule-no-start-duplicated-conjunction": "^2.0.2",
     "textlint-rule-no-todo": "^2.0.1",
     "vuepress": "^1.9.7",
