--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-max-comma": "^2.0.2",
     "textlint-rule-no-dead-link": "^5.1.2",
+    "textlint-rule-no-empty-element": "^0.3.1",
     "textlint-rule-no-empty-section": "^1.1.0",
     "textlint-rule-no-start-duplicated-conjunction": "^2.0.2",
     "textlint-rule-no-todo": "^2.0.1",
