--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/IT4Change/IT4C.dev#readme",
   "devDependencies": {
+    "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.9",
     "textlint": "^12.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-max-comma": "^2.0.2",
