--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "textlint-rule-no-empty-section": "^1.1.0",
     "textlint-rule-no-start-duplicated-conjunction": "^2.0.2",
     "textlint-rule-no-todo": "^2.0.1",
+    "textlint-rule-no-zero-width-spaces": "^1.0.1",
     "textlint-rule-period-in-list-item": "^0.3.3",
     "vuepress": "^1.9.7",
     "vuepress-theme-book": "^0.0.9"
