--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.9",
     "textlint": "^12.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-apostrophe": "^2.0.0",
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-doubled-spaces": "^1.0.0",
     "textlint-rule-max-comma": "^2.0.2",
