--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -1,10 +1,10 @@
-name: build test CI
+name: lint test CI
 
 on: push
 
 jobs:
   build-test:
-    name: Build Test
+    name: Lint Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
