--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -18,6 +18,6 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         TARGET_REPO: IT4Change/IT4C.dev
         TARGET_BRANCH: gh-pages
-        BUILD_SCRIPT: npm install && npm run build:workflow
+        BUILD_SCRIPT: npm install && npm run build
         BUILD_DIR: docs/.vuepress/dist
         CNAME: https://www.it4c.dev
