--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -10,6 +10,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup Node 19
+        uses: actions/setup-node@v3
+        with:
+          node-version: '19'
+
       - name: npm-install
         run: npm install
       
