setup node 19 on the other two workflows aswell

--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -12,6 +12,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
 
+    - name: Setup Node 19
+        uses: actions/setup-node@v3
+        with:
+          node-version: '19'
+
     - name: vuepress-deploy
       uses: jenkey2011/vuepress-deploy@v1.8.1
       env:
