--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "textlint-rule-no-zero-width-spaces": "^1.0.1",
     "textlint-rule-period-in-list-item": "^1.0.1",
     "textlint-rule-write-good": "^2.0.0",
-    "vuepress": "^1.9.8",
-    "vuepress-theme-book": "^0.0.9"
+    "vuepress-theme-hope": "^2.0.0-beta.237",
+    "vuepress": "^2.0.0-beta.67"
   }
 }
