--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "textlint-rule-no-zero-width-spaces": "^1.0.1",
     "textlint-rule-period-in-list-item": "^1.0.1",
     "textlint-rule-write-good": "^2.0.0",
-    "vuepress-theme-hope": "^2.0.0-beta.237",
-    "vuepress": "^2.0.0-beta.67"
+    "vuepress": "^2.0.0-beta.67",
+    "vuepress-plugin-search-pro": "^2.0.0-beta.237",
+    "vuepress-theme-hope": "^2.0.0-beta.237"
   }
 }
