--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -12,11 +12,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
 
-    - name: Setup Node 20
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-
     - name: vuepress-deploy
       uses: jenkey2011/vuepress-deploy@master
       env:
@@ -25,4 +20,4 @@ jobs:
         TARGET_BRANCH: gh-pages
         BUILD_SCRIPT: npm install && npm run build-node16
         BUILD_DIR: docs/.vuepress/dist
-        # CNAME: https://www.it4c.dev
+        CNAME: https://it4change.github.io/IT4C.dev/
