--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -18,6 +18,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         TARGET_REPO: IT4Change/IT4C.dev
         TARGET_BRANCH: gh-pages
-        BUILD_SCRIPT: npm install && npm run build-node16
+        BUILD_SCRIPT: npm install && npm run build-node16 -- --config docs/.vuepress/config github.js
         BUILD_DIR: docs/.vuepress/dist
-        CNAME: https://it4change.github.io/IT4C.dev/
