--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -7,6 +7,10 @@ on:
       - edited
       - synchronize
 
+  permissions:
+  pull-requests: write
+  statuses: write
+  
 jobs:
   main:
     name: Validate PR title
