--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -7,7 +7,11 @@ on:
       - edited
       - synchronize
 
-jobs:
+  permissions:
+  pull-requests: write
+  statuses: write
+
+  jobs:
   main:
     name: Validate PR title
     runs-on: ubuntu-latest
