--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -8,7 +8,8 @@ on:
       - synchronize
 
 permissions:
-  pull-requests: read
+  contents: write
+  pull-requests: write
   statuses: write
 
 jobs:
