--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -8,7 +8,11 @@ on:
       - synchronize
 
 permissions:
+  actions: write
+  attestations: write
+  checks: write
   contents: write
+  id-token: write
   pull-requests: write
   statuses: write
 
