--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.4",
     "@vuepress/bundler-vite": "^2.0.0-rc.19",
+    "@vuepress/plugin-slimsearch": "^2.0.0-rc.74",
     "textlint": "^14.4.2",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-apostrophe": "^3.0.0",
@@ -37,7 +38,6 @@
     "textlint-rule-period-in-list-item": "^1.0.1",
     "textlint-rule-write-good": "^2.0.0",
     "vuepress": "^2.0.0-rc.19",
-    "vuepress-plugin-search-pro": "^2.0.0-rc.59",
     "vuepress-theme-hope": "^2.0.0-rc.71"
   }
 }
