remove legacy openssl option
The option `--openssl-legacy-provider` seems no longer required after
the latest updates, hence it is removed

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The IT4C.dev website",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_OPTIONS=--openssl-legacy-provider vuepress build docs",
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider vuepress dev docs",
+    "build": "vuepress build docs",
+    "dev": "vuepress dev docs",
     "test": "textlint \"*.md\" \"docs/**/*.md\""
   },
   "repository": {
