--- a/backend/package.json
+++ b/backend/package.json
@@ -14,15 +14,35 @@
     "start": "node ./build/index.js",
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
+    "update": "npx npm-check-updates"
   },
   "devDependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@types/nodemailer": "^6.4.17",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-no-catch-all": "^1.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-yml": "^1.14.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   },
   "dependencies": {
     "@fastify/type-provider-typebox": "^5.1.0",
-    "@types/nodemailer": "^6.4.17",
     "fastify": "^5.2.1",
     "nodemailer": "^6.10.0",
     "ts-dotenv": "^0.9.1"
