workflow: lint pr - new scope backend
Add a new scope for the new backend for validating the PR titles

--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -26,6 +26,7 @@ jobs:
           scopes: |
             content
             workflow
+            backend
             other
           # Configure that a scope must always be provided.
           requireScope: true
