--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "vuepress build docs",
     "dev": "vuepress dev docs",
+    "dev-prod": "npm run build && http-server ./docs/.vuepress/dist",
     "test": "textlint \"*.md\" \"docs/**/*.md\""
   },
   "repository": {
@@ -22,6 +23,7 @@
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.4",
     "@vuepress/bundler-vite": "^2.0.0-rc.20",
     "@vuepress/plugin-slimsearch": "^2.0.0-rc.82",
+    "http-server": "^14.1.1",
     "textlint": "^14.4.2",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-apostrophe": "^3.0.0",
