--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@vuepress/plugin-slimsearch": "^2.0.0-rc.82",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
     "http-server": "^14.1.1",
+    "prettier": "3.5.3",
     "sass-embedded": "^1.86.0",
     "tailwindcss": "^4.0.5",
     "textlint": "^14.5.0",
