new token utilizing dependabot scope

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@4b9c6f0185a1c94f18bc293dc050c8c073b4fcc8 #v2.6.6
         with:
           target: minor
-          github-token: ${{ secrets.ACCESS_TOKEN }}
+          github-token: ${{ secrets.DEPENDABOT_AUTOMERGE_TOKEN }}
