--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@fastify/type-provider-typebox": "^5.2.0",
+    "@fastify/type-provider-typebox": "^6.1.0",
+    "@sinclair/typebox": "^0.34.48",
     "@types/jest": "^30.0.0",
     "@types/nodemailer": "^7.0.9",
     "fastify": "^5.7.4",
