--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "start": "node ./build/src/index.js",
     "build": "tsc",
     "dev": "tsx watch ./src/index.ts",
-    "test:unit": "jest",
+    "test:unit": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:lint:eslint": "eslint --max-warnings 0 .",
     "update": "npx npm-check-updates"
   },
@@ -34,25 +34,6 @@
     "fastify": "^5.7.4",
     "nodemailer": "^8.0.1",
     "ts-dotenv": "^0.9.1"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "setupFiles": [
-      "./jest/setup.loadEnv.ts"
-    ],
-    "collectCoverage": true,
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    },
-    "modulePathIgnorePatterns": [
-      "<rootDir>/build/"
-    ]
   },
   "imports": {
     "#src/*": "./src/*",
