--- a/.github/workflows/backend.test.lint.yml
+++ b/.github/workflows/backend.test.lint.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           node-version-file: './.tool-versions'
       - name: Lint
-        run: npm install && npm run test:lint:eslint
+        run: npm install && npm run lint
         working-directory: ./backend
