--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -112,5 +112,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["**/*.spec.ts", "**/*.test.ts", "jest/"]
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "jest/", "jest.config.ts", "build/", "coverage/"]
 }
