--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -62,7 +62,8 @@
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-    "outDir": "./build" /* Specify an output folder for all emitted files. */,
+    // "outDir": "./build",                                /* Specify an output folder for all emitted files. */
+    "noEmit": true /* tsc is used for type-checking only, tsup handles the build */,
     // "removeComments": true,                           /* Disable emitting comments. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
